<resources>
    <string name="app_name">PensumCreator</string>

    <!-- Generic messages -->
    <string name="ToDo">TODO</string>
    <string name="OK_text">OK</string>
    <string name="NO_text">Nej</string>
    <string name="YES_text">Ja</string>
    <string name="backslash">/</string>

    <!-- Toolbar titles -->
    <string name="pensum_title">Pensum</string>
    <string name="litterature_title">Værker</string>

    <!-- Button texts -->
    <string name="Send_text">Send</string>
    <string name="Edit_text">Rediger</string>
    <string name="Add_text">Tilføj</string>

    <!-- Fragment_AddPensen EditText -->
    <string name="hint_pensum_title">Titel</string>
    <string name="hint_pensum_teacher">Underviser</string>
    <string name="hint_pensum_size">Antal sider</string>
    <string name="hint_pensum_comment">Evt. kommentarer</string>

    <!-- Fragment_AddLitt EditText -->
    <string name="hint_name">Den Grimme Ælling</string>
    <string name="hint_name_required">Indtast venligst en titel</string>
    <string name="hint_author">H.C Andersen</string>
    <string name="hint_author_year">1874</string>
    <string name="hint_period">Romantikken</string>
    <string name="hint_genre">Eventyr</string>
    <string name="hint_pages">Sider</string>
    <string name="hint_publisher">Gyldendahls Forlag</string>
    <string name="hint_published_year">1960</string>
    <string name="hint_commentary">Evt. kommentarer.</string>

    <string name="helper_name">Navn</string>
    <string name="helper_author">Forfatter</string>
    <string name="helper_author_year">Oprindelses år</string>
    <string name="helper_period">Periode</string>
    <string name="helper_genre">Genre</string>
    <string name="helper_pages">Sider i værket</string>
    <string name="helper_publisher">Udgivelsens forlag</string>
    <string name="helper_published_year">Årstal for udgivelsen</string>

    <!-- Fragment_AddLitt Buttons -->
    <string name="btn_camera">Camera</string>
    <string name="btn_save">Save</string>
    <string name="btn_Storage">Storage</string>

    <!-- Fragment_AddPensum Buttons -->

    <string name="btn_savepensum">Save</string>
    <string name="btn_cancelpensum">Cancel</string>

    <!-- Fragment ScanImg Error messages -->
    <string name="errorTitle">Ooops !</string>
    <string name="errorNameMissing">You need to give your product a name</string>
    <string name="errorTextRecognizer">Couldn\'t find any tekst on the image!</string>
    <string name="loading">loading</string>
</resources>