<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="95">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="7dp"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_author">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_author"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_author_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="7dp"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_author_year">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_author_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_author_year"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="7dp"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_period">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_period"/>
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/text_input_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_weight="1"
                    app:helperTextEnabled="true"
                    app:helperText="@string/helper_genre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_genre"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/text_input_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="7dp"
                    app:helperTextEnabled="true"
                    app:helperText="@string/helper_pages">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_pages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pages"/>
                </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_publisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:layout_weight="1"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_publisher">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_publisher"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_published_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="7dp"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_published_year">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_published_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_published_year"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_commentary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="7dp"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_commentary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_commentary"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="5">

        <Button
            android:id="@+id/ScanImg_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="false"
            android:enabled="false"
            android:contentDescription="@string/btn_camera" />

        <Button
            android:id="@+id/ScanStorageImg_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/btn_Storage" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="20dp"
            android:contentDescription="@string/btn_save"/>

    </LinearLayout>

</LinearLayout>