<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="95">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_pensumtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:helperTextEnabled="true"
                app:helperText="@string/helper_name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_pensumtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pensum_title" />
            </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_pensumauthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                app:helperTextEnabled="true"
                app:helperText="@string/hint_pensum_teacher">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_pensumauther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pensum_teacher" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_pensumpages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:helperTextEnabled="true"
                app:helperText="@string/hint_pensum_size">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_pensumpages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pensum_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/text_input_pensumcomment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:helperTextEnabled="true"
                app:helperText="@string/hint_pensum_comment">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_pensumcomment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_commentary"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="5">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/btn_savepensum" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/btn_cancelpensum" />

    </LinearLayout>

</LinearLayout>