<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Litterature.Litterature_Fragment"
    android:orientation="vertical">

    <!-- ToDo apply style for toolbar -->
    <!-- Toolbar support
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /> -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listview_litterature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expand_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        app:srcCompat="@drawable/icon_menu"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary" />

    <FrameLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        >


        <com.ogaclejapan.arclayout.ArcLayout
            android:id="@+id/arc_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:arc_origin="bottom|right"
            app:arc_axisRadius="150dp"
            app:arc_freeAngle="false"
            app:arc_reverseAngle="false"
            >


            <ImageButton
                android:id="@+id/add_litterature"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                app:arc_origin="center"
                android:src="@android:drawable/ic_input_add"
                app:backgroundTint="@color/colorPrimary"
                android:tint="@android:color/white"
                tools:ignore="MissingPrefix"
                android:contentDescription="@string/Add_text" />

            <ImageButton
                android:id="@+id/edit_litterature"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:src="@android:drawable/ic_menu_edit"
                app:backgroundTint="@color/colorPrimary"
                android:tint="@android:color/white"
                android:contentDescription="@string/Edit_text" />

            <ImageButton
                android:id="@+id/share_litterature"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:src="@android:drawable/ic_menu_send"
                app:backgroundTint="@color/colorPrimary"
                android:tint="@android:color/white"
                android:contentDescription="@string/Send_text" />

        </com.ogaclejapan.arclayout.ArcLayout>

    </FrameLayout>



</RelativeLayout>